Fix #3, change padding on tabs from 8px to 6px to prevent overflow on Firefox

--- a/source/App.css
+++ b/source/App.css
@@ -1,7 +1,7 @@
 .tab {
 	background: whitesmoke;
 	border: 1px dotted silver;
-	padding: 8px;
+	padding: 6px;
 	margin: 0;
 }
 
